update temp dir

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ mgstage/failed_ids.txt
 nanairo/N_m3u8DL-RE.exe
 nanairo/N_m3u8DL-RE
 nanairo/config.json
+nanairo/failed_ids.txt
+nanairo/nanairo_downloader.log
